<resources>
    <!--Principales recursos-->
    <string name="app_name">EngineTools</string>
    <string name="tab_text_1">Herramientas</string>
    <string name="tab_text_2">Recursos</string>
    <string name="tab_text_3">Bibliografía</string>


    <!--Herramientas-->
    <string name="convertidor">Convertidor Unidades</string>
    <string name="interpol">Interpolación</string>
    <string name="ecsolver">Ecuacion Solver</string>
    <string name="calcres">Calculadora Resistencias</string>

    <!--Materias-->
    <string name="control">Control</string>
    <string name="calculo">Cálculo</string>
    <string name="termo">Termodinámica</string>
    <string name="electronica">Electrónica</string>
    <!--Bibliografia arreflo-->
    <string-array name="bibliografia">
        <item>@string/control</item>
        <item>@string/calculo</item>
        <item>@string/termo</item>
        <item>@string/electronica</item>
    </string-array>


    <!--Arreglo medidas-->
    <string-array name="arraymedidas">
        <item>Longitud</item>
        <item>Peso</item>
        <item>Potencia</item>
    </string-array>

    <!--Arreglo longitud-->
    <string-array name="arraylongitud">
        <item>cm</item>
        <item>m</item>
        <item>inch</item>
        <item>ft</item>
        <item>yd</item>
        <item>mile</item>
    </string-array>
    <!--Arreglo PEso-->
    <string-array name="arraypeso">
        <item>mg</item>
        <item>g</item>
        <item>kg</item>
        <item>lb</item>
        <item>oz</item>
        <item>tonne</item>
    </string-array>
    <!--Arreglo Potencia-->
    <string-array name="arrayapotencia">
        <item>W</item>
        <item>kW</item>
        <item>MW</item>
        <item>kcal/s</item>
        <item>HP</item>
        <item>BTU/h</item>
    </string-array>

    <!--Arreglos de Bibliografiaprin-->
    <string name="Listlibros">Lista libros</string>
    <string name="Listinter">Canales,blogs y páginas</string>



    <!--Arreglos de Recursos de Materias-->
    <string-array name="arrayelectr">
        <item>Datasheets</item>
        <item>Tabla capacitores</item>
        <item>Arreglos Básicos Amp.Op.</item>
    </string-array>

    <string-array name="arraycalculo">
        <item>Integrales</item>
        <item>Derivadas</item>
        <item>Transformada Laplace</item>
        <item>Transformada Fourier</item>
    </string-array>

    <string-array name="arraycontrol">
        <item>Reducción diagramas bloques</item>
        <item>Sistemas Primer Orden</item>
        <item>Sistemas Segundo Orden</item>
    </string-array>

    <string-array name="arraytermo">
        <item>Tablas agua</item>
        <item>Tablas R-134a</item>
        <item>Carta psicométrica</item>
        <item>Gases ideales</item>
    </string-array>

    <!--Varios-->
    <string name="Interpolarbtn">INTERPOLAR</string>
    <string name="calcularbtn">CALCULAR</string>
    <string name="limpiarbtn">C</string>
    <string name="raicestitulo">RAICES</string>
    <string name="ecuacionsexto">aX^2+bX+c=0</string>

    <string name="calculobiblio">Bibliografía Cálculo</string>
    <string name="controlbiblio">Bibliografía Control</string>
    <string name="termobiblio">Bibliografía Termodinámica</string>
    <string name="electronicabiblio">Bibliografía Electrónica</string>



    <string-array name="valoresx">
        <item>X1=</item>
        <item>X2=</item>

    </string-array>


</resources>
