<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include
        android:id="@+id/toolbarplantilla"
        layout="@layout/miactionbar"></include>

    <TextView
        android:id="@+id/textView"
        android:text="@string/ecuacionsexto"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/coefA"
            android:hint="a"
            android:gravity="center"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/anchoceldaec"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/coefB"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/anchoceldaec"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:hint="b" />

        <EditText
            android:id="@+id/coefC"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/anchoceldaec"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:hint="c" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnresolverecuacion"
            android:layout_width="188dp"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:onClick="onResolverecuacion"
            android:text="@string/calcularbtn" />

        <Button
            android:layout_width="71dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:onClick="onClearcoef"
            android:text="@string/limpiarbtn" />

    </LinearLayout>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/raicestitulo"
        android:textStyle="bold"
        />
    <LinearLayout
        android:id="@+id/layoutTabla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
       >

        <ScrollView
            android:id="@+id/scrollvertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scrollbars="vertical">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/tabla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TableLayout>
            </LinearLayout>


        </ScrollView>

    </LinearLayout>














</android.support.v7.widget.LinearLayoutCompat>