<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paper_3225109_1280"
    android:minHeight="0dp"
    tools:context="com.example.isgil27.enginetools11.HerramientasFragment">


    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/interpola"
        android:layout_width="158dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="@dimen/elevtxtimgbtn"
        android:gravity="center_horizontal"
        android:text="@string/interpol"
        android:textColor="@color/colorblan"
        android:textSize="@dimen/txtsizesubtitulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <TextView
        android:id="@+id/conver"
        android:layout_width="128dp"
        android:layout_height="73dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="@dimen/elevtxtimgbtn"
        android:gravity="center_horizontal"
        android:text="@string/convertidor"
        android:textColor="@color/colorblan"
        android:textSize="@dimen/txtsizesubtitulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />
    <TextView
        android:layout_width="104dp"
        android:layout_height="73dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="@dimen/elevtxtimgbtn"
        android:gravity="center_horizontal"
        android:text="@string/ecsolver"
        android:textColor="@color/colorblan"
        android:textSize="@dimen/txtsizesubtitulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637" />

    <ImageButton
        android:id="@+id/imgbtnecuacion"
        android:layout_width="@dimen/ancho_herra"
        android:layout_height="@dimen/largo_herra"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="false"
        android:alpha="0.8"
        android:elevation="@dimen/elevacionimgbtn"
        android:scaleType="fitXY"
        android:src="@drawable/calculo"
        android:textSize="@dimen/txtsizesubtitulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653" />

    <ImageButton
        android:id="@+id/imgbtnconvertidor"
        android:layout_width="@dimen/ancho_herra"
        android:layout_height="@dimen/largo_herra"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="@dimen/elevacionimgbtn"
        android:longClickable="false"
        android:scaleType="fitXY"
        android:src="@drawable/tool_2820951_12802"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <ImageButton
        android:id="@+id/imgbtninterpolar"
        android:layout_width="@dimen/ancho_herra"
        android:layout_height="@dimen/largo_herra"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="@dimen/elevacionimgbtn"
        android:scaleType="fitXY"
        android:src="@drawable/buy_me_a_coffee_990381_1280"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />
</android.support.constraint.ConstraintLayout>
